force-app/main/default/objects/Event_Vote_c__c/Event_Vote_c__c.object-meta.xml
<CustomObject>
    <label>Event Vote</label>
    <nameField>
        <label>Event_Vote__c Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Event Votes</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>