force-app/main/default/objects/Event_Vote_c__c/fields/Event_Option__c.field-meta.xml
<CustomField>
    <fullName>Event_Option__c</fullName>
    <label>Event Option</label>
    <referenceTo>Event_Option__c</referenceTo>
    <relationshipLabel>Event Votes</relationshipLabel>
    <relationshipName>Event_Votes</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>